# education-tool

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ChangeLog.md  README.md  build-wasm.sh  build.py  compile_flags.txt  emscripten_build_and_publish.sh  make.bat  p  p.bat  rules.txt  technical_debt.txt  toll.txt  workspace.10x
.github/workflows/: package.yml  weekly.yml
assets/: lib.um  main.um
assets/models/: actor.gltf  barrel.glb  barrel.gltf  car.gltf  counter.gltf  crate.gltf  cube.gltf  cube_shaded.gltf  cylinder.gltf  floor.gltf  skybox.gltf  tile.glb  tile.gltf  tree.gltf  wall_edge.gltf
assets/script/: lib.um  main.um
catedu/: boxdraw.cpp  boxdraw.hpp  camera.cpp  camera.hpp  camera_input.hpp  character.cpp  character.hpp  console.cpp  console.hpp  dialog.cpp  dialog.hpp  easy_gui.cpp  easy_gui.hpp  entity_editor.cpp  entity_editor.hpp  entry.cpp  entry.hpp  environment.hpp  file_buffer.cpp  file_buffer.hpp  flashbacks.cpp  flashbacks.hpp  help_menu.cpp  help_menu.hpp  imgui_tricks.cpp  imgui_tricks.hpp  imgui_utilities.hpp  impl.cpp  input.cpp  input.hpp  main.cpp  main_menu.cpp  main_menu.hpp  math.hpp  net_table.hpp  netcode.cpp  netcode.hpp  netcode_callbacks.inl  physics.cpp  physics.hpp  (+21 more)
catedu/core/alloc/: allocator.cpp  allocator.hpp  arena.cpp  arena.hpp  bump_allocator.cpp  bump_allocator.hpp  free_list.hpp
catedu/core/fs/: read_file_temp.hpp
catedu/core/math/: brezenham.hpp  constants.hpp  coordinates.cpp  coordinates.hpp  interpolation.hpp  math.hpp  point_intersect.cpp  point_intersect.hpp  quintic_superellipse.cpp  quintic_superellipse.hpp  superellipse.cpp  superellipse.hpp
catedu/core/memory/: addressfixer.hpp  buffer.hpp  init.hpp  operations.hpp  serial_mem.cpp  serial_mem.hpp  serial_mem_ext.hpp
catedu/core/patcher/: patch.hpp  patch_applier.cpp  patch_applier.hpp  patch_creator.cpp  patch_creator.hpp  patch_debugger.cpp  patch_debugger.hpp  patch_explorer.cpp  patch_explorer.hpp  user.cpp  user.hpp
catedu/core/storage/: id_retainer.hpp  stack.hpp  table.hpp
catedu/core/text_editing/: text_editing.cpp  text_editing.hpp
catedu/diag/: diag_monitor.cpp  diag_monitor.hpp
catedu/genobj/: bounds.cpp  bounds.hpp  building.cpp  building.hpp  construct.hpp  deleter.cpp  deleter.hpp  generator.cpp  generator.hpp  grid.cpp  grid.hpp  ground.cpp  ground.hpp  player.cpp  player.hpp  render.cpp  render.hpp  road.cpp  road.hpp  tree.cpp  tree.hpp  wall.cpp  wall.hpp
catedu/gui/debugtree/: debugtree.cpp  debugtree.hpp
catedu/gui/dialogeditor/: dialogeditor.cpp  dialogeditor.hpp
catedu/gui/editor/: camera.cpp  camera.hpp  dispatcher.cpp  dispatcher.hpp  edit_basic.cpp  edit_basic.hpp  edit_building.cpp  edit_building.hpp  edit_delete.cpp  edit_delete.hpp  edit_line.cpp  edit_line.hpp  edit_road.cpp  edit_road.hpp  editor.cpp  editor.hpp  offscreen.cpp  offscreen.hpp  playtest.cpp  playtest.hpp  render_world.cpp  render_world.hpp  script.hpp  script_editor.cpp  script_editor.hpp  stencil.cpp  stencil.hpp  world.cpp  (+3 more)
catedu/misc/: camera_input.hpp  util.cpp  util.hpp
catedu/rendering/: color.hpp  mesh_generator.cpp  mesh_generator.hpp  render_buffer.cpp  render_buffer.hpp  render_model.hpp  resource_spec.cpp  resource_spec.hpp  texture.cpp  texture.hpp
catedu/resources/: resources.cpp  resources.hpp
catedu/scene/: basic_tilemap.cpp  basic_tilemap.hpp  legacy_scene.cpp  legacy_scene.hpp  obj_backdrop.cpp  obj_backdrop.hpp  obj_entity.cpp  obj_entity.hpp  obj_tilemap.cpp  obj_tilemap.hpp  physics.cpp  physics.hpp  render_world.cpp  render_world.hpp  scene.cpp  scene.hpp  script.cpp  script.hpp  space.cpp  space.hpp  world.cpp  world.hpp  world_file.cpp
catedu/shaders/: amalgamation.glsl  boxdraw.glsl  math.glsl  pbr.glsl  ui.glsl
catedu/staging/: texture.cpp  texture.hpp
catedu/sys/: console.cpp  console.hpp  fps.cpp  fps.hpp  input.cpp  input.hpp  oom.hpp  sg_tricks.cpp  sg_tricks.hpp  sokol_setup.cpp  sokol_setup.hpp
catedu/ui/: class_list.cpp  class_list.hpp  rendering.cpp  rendering.hpp  style.cpp  style.hpp  user.cpp  user.hpp  ux.cpp  ux.hpp  widgets.cpp  widgets.hpp
catedu/umka/: umka.cpp  umka.hpp
docs/: TODO.md  changelog.md  contribution_guide.txt  project__saving_and_loading.md  todo.txt
scripts/: build-wasm.sh  shell.html
src/: box_ray_collision_pool.cpp  box_ray_collision_pool.hpp  boxdraw.cpp  boxdraw.hpp  camera.cpp  camera.hpp  camera_input.hpp  character.cpp  character.hpp  console.cpp  console.hpp  dialog.hpp  easy_gui.cpp  easy_gui.hpp  enet_chat.cpp  enet_chat.hpp  entity_editor.cpp  entity_editor.hpp  entry.cpp  entry.hpp  environment.hpp  file_buffer.cpp  flashbacks.cpp  flashbacks.hpp  help_menu.cpp  help_menu.hpp  imgui_tricks.cpp  imgui_tricks.hpp  imgui_utilities.hpp  impl.cpp  impl.m  input.cpp  input.hpp  main.cpp  main_menu.cpp  main_menu.hpp  math.hpp  net_table.hpp  netcode.cpp  netcode.hpp  (+22 more)
src/shaders/: amalgamation.glsl
tests/: test_main.cpp
tests/unit/: test_id_retainer.inl  test_main.cpp  test_serial_mem.inl  test_table.inl  test_text_editing.inl
(+60 files in other folders)
